@@ -12,3 +12,4 @@ testfile
 pygame:
 mac default icon
 search libs e.g. SDL_ttf-2.0 before SDL_ttf
+24-bit don't assume RGB, could be BGR.
